--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
 <body
     <hl>Harmonic Collection</hl>
     
-    <a href="file:///Users/mariaromero/Documents/GitHub/mariarg.github.io/entry-1.html">click this</a>
+    <a href="file:///Users/mariaromero/Documents/GitHub/mariaromerogodoy.github.io/">click this</a>
 </body>
