--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body
     <hl>Harmonic Collection</hl>
     
-    <a href="file:///Users/mariaromerogodoy/Documents/GitHub/mariaromerogodoy.github.io/">click this</a>
+    <a href="file:///Users/mariaromero/Documents/GitHub/mariaromerogodoy.github.io/entry-1.html">click this</a>
 </body>
+<li><a href="entry-2/index.htm">entry 2 </a></a></li>
