--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marias works</title>
 </head>
-<body
-    <hl>Harmonic Collection</hl>
+<body>
+
+    <h1>Harmonic Collection</h1>
     
-    <a href="file:///Users/mariaromero/Documents/GitHub/mariaromerogodoy.github.io/entry-1.html">click this</a>
-</body>
+    <a href="entry-1/index.html">click this</a>
+
 <li><a href="entry-2/index.htm">entry 2 </a></a></li>
+
+
+</body>
