--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <a href="entry-1/index.html">click this</a>
 
-    <a href="entry-2/style.css">click this</a>
+    <a href="entry-2/index.html/style.css">click this</a>
 <a href="entry-3/index.html">click this</a>
 
 </body>
