--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 
     <h1>Harmonic Collection</h1>
     
-    <a href="entry-1/index.html">click this</a>
+    <a href="entry-1/index.html">entry-1</a>
 
-    <a href="entry-2/index.html/style.css">click this</a>
-<a href="entry-3/index.html">click this</a>
+    <a href="entry-2/index.html">entry-2</a>
+
+<a href="entry-3/index.html">entry-3</a>
 
 </body>
