--- a/entry-4/index.html
+++ b/entry-4/index.html
@@ -1,10 +1,8 @@
-<link rel="stylesheet" href="style.css">
 <!DOCTYPE html>
-<h1> LIFE AS A</h1>
 
 <div class="hello-goodbye">
-  <h2 id="hello">SECRET</h2>
-  <h2 id="goodbye">MERMAID</h2>
+  <h2 id="hello">ocean</h2>
+  <h2 id="goodbye">OCEAN</h2>
 </div>
 <html lang="en">
 <head>
@@ -28,4 +26,15 @@
 <body>
     <div class="image-hover"></div>
 </body>
-</html>
+  <div class="container">
+<p>
+  The ocean is the body of salt water that covers approximately 70.8% of Earth.[8] In English, the term ocean also refers to any of the large bodies of water into which the world ocean is conventionally divided.[9] The following names describe five different areas of the ocean: Pacific, Atlantic, Indian, Antarctic/Southern, and Arctic.[10][11] The ocean contains 97% of Earth's water[8] and is the primary component of Earth's hydrosphere and is thereby essential to life on Earth. The ocean influences climate and weather patterns, the carbon cycle, and the water cycle by acting as a huge heat reservoir.
+
+Ocean scientists split the ocean into vertical and horizontal zones based on physical and biological conditions. The pelagic zone is the open ocean's water column from the surface to the ocean floor. The water column is further divided into zones based on depth and the amount of light present. The photic zone starts at the surface and is defined to be "the depth at which light intensity is only 1% of the surface value"[12]: 36  (approximately 200 m in the open ocean). This is the zone where photosynthesis can occur. In this process plants and microscopic algae (free floating phytoplankton) use light, water, carbon dioxide, and nutrients to produce organic matter. As a result, the photic zone is the most biodiverse and the source of the food supply which sustains most of the ocean ecosystem. Ocean photosynthesis also produces half of the oxygen in the Earth's atmosphere.[13] Light can only penetrate a few hundred more meters; the rest of the deeper ocean is cold and dark (these zones are called mesopelagic and aphotic zones). The continental shelf is where the ocean meets dry land. It is more shallow, with a depth of a few hundred meters or less. Human activity often has negative impacts on marine life within the continental shelf.
+
+Ocean temperatures depend on the amount of solar radiation reaching the ocean surface. In the tropics, surface temperatures can rise to over 30 °C (86 °F). Near the poles where sea ice forms, the temperature in equilibrium is about −2 °C (28 °F). In all parts of the ocean, deep ocean temperatures range between −2 °C (28 °F) and 5 °C (41 °F).[14] Constant circulation of water in the ocean creates ocean currents. Those currents are caused by forces operating on the water, such as temperature and salinity differences, atmospheric circulation (wind), and the Coriolis effect.[15] Tides create tidal currents, while wind and waves cause surface currents. The Gulf Stream, Kuroshio Current, Agulhas Current and Antarctic Circumpolar Current are all major ocean currents. Such currents transport massive amounts of water, gases, pollutants and heat to different parts of the world, and from the surface into the deep ocean. All this has impacts on the global climate system.
+
+Ocean water contains dissolved gases, including oxygen, carbon dioxide and nitrogen. An exchange of these gases occurs at the ocean's surface. The solubility of these gases depends on the temperature and salinity of the water.[16] The carbon dioxide concentration in the atmosphere is rising due to CO2 emissions, mainly from fossil fuel combustion. As the oceans absorb CO2 from the atmosphere, a higher concentration leads to ocean acidification (a drop in pH value).[17]
+
+The ocean provides many benefits to humans such as ecosystem services, access to seafood and other marine resources, and a means of transport. The ocean is known to be the habitat of over 230,000 species, but may hold considerably more – perhaps over two million species.[18] Yet, the ocean faces many environmental threats, such as marine pollution, overfishing, and the effects of climate change. Those effects include ocean warming, ocean acidification and sea level rise. The continental shelf and coastal waters are most affected by human activity. <p>
+   
