--- a/entry-9/index.html
+++ b/entry-9/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <link rel="stylesheet" href="style.css">
-<script></script> tag!
+<script src="script.js" defer></script>
 
 <h1>FOREST</h1>
   <div class="container">
