--- a/entry-8/index.html
+++ b/entry-8/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="script.js">
+<script src="script.js"></script>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
