--- a/WHack a MoLE/index.html
+++ b/WHack a MoLE/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE Html>
-  
+<link rel="stylesheet" href="style.css">
+<script src="script.js" defer></script>
+
   <html>
     <head>
       <meta charset= "UTF-8">
