--- a/WHack a MoLE/index.html
+++ b/WHack a MoLE/index.html
@@ -15,4 +15,7 @@
       <h1>WHaCk a MoLE</h1>
       <h2 id="score">0</h2>
         <!-- 3x3 -->
-      <div id="board"><div id="0-8"></div></div>
+      <div id="board"></div>
+      </body>
+
+      </html>
