--- a/WHack a MoLE/index.html
+++ b/WHack a MoLE/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE Html>
-<link rel="stylesheet" href="style.css">
-<script src="script.js" defer></script>
 
   <html>
     <head>
       <meta charset= "UTF-8">
-      <meta name= "viewport" content= "width=device-width, inital-scale=1.0">
-      <title> Whack a Mole </title>
-      <link rel= "stylesheet" href="mole.css">
-      <script src="mole.js"></script>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title> Near the ocean </title>
+      <link rel= "stylesheet" href="style.css">
+      <script src="script.js"></script>
+      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
       </head>
       
       <body>
-      <h1>WHaCk a MoLE</h1>
+        <video autoplay muted loop id="myVideo">
+          <source src="../coffee/P1044381 2.mp4" type="video/mp4">
+        </video>
+        
+        <div class="content">
+      <button id="restartButton"> try again </button>
+      <h1>Don't hurt the Coral</h1>
       <h2 id="score">0</h2>
       <!-- 3x3 -->
       <div id="board"></div>
+      </div>
+
       </body>
 
       </html>
